@@ -1,3 +1,4 @@
+* HQ: event log - fix autorefresh
 * fix of loading bootstrap-multiselect javascript
 
 rel 0.2.3
